unpackaged/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/Allergen_Name__c.field-meta.xml
<CustomField>
    <fullName>Allergen_Name__c</fullName>
    <description>Used to capture the name of the thing the Patient is allergic to</description>
    <label>Allergen Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>