unpackaged/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/Allergy_Type__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Type__c</fullName>
    <label>Allergy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Food Allergy</fullName>
            </value>
            <value>
                <fullName>Materials Allergy</fullName>
            </value>
            <value>
                <fullName>Medication Allergy</fullName>
            </value>
            <value>
                <fullName>Seasonal Allergy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>