unpackaged/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__CriticalityLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CriticalityLabel__c</fullName>
    <label>Criticality Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>