unpackaged/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__Reaction255__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Reaction255__c</fullName>
    <description>Reactions associated with the sensitivity</description>
    <label>Reaction 255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>