unpackaged/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__Reaction__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Reaction__c</fullName>
    <label>Reaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>