unpackaged/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__StatusSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__StatusSystem__c</fullName>
    <description>Identity of the terminology system</description>
    <label>Status System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>