unpackaged/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/HealthCloudGA__SubstanceLong__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubstanceLong__c</fullName>
    <label>Substance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>