unpackaged/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Medication object for the medication someone is allergic to.</description>
    <label>Medication</label>
    <referenceTo>Medication__c</referenceTo>
    <relationshipLabel>Allergy Intolerances</relationshipLabel>
    <relationshipName>Allergy_Intolerances</relationshipName>
    <type>Lookup</type>
</CustomField>