unpackaged/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/Medication_Name__c.field-meta.xml
<CustomField>
    <fullName>Medication_Name__c</fullName>
    <description>Name of the Medication an allergy is being registered for</description>
    <label>Medication Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>