unpackaged/main/default/objects/HealthCloudGA__EhrAllergyIntolerance__c/fields/Reaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Type__c</fullName>
    <label>Type of Reaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A sense of “impending doom”</fullName>
            </value>
            <value>
                <fullName>Bloating</fullName>
            </value>
            <value>
                <fullName>Chest tightness and losing your breath</fullName>
            </value>
            <value>
                <fullName>Cough</fullName>
            </value>
            <value>
                <fullName>Diarrhea</fullName>
            </value>
            <value>
                <fullName>Feeling faint, light-headed or “blacking out”</fullName>
            </value>
            <value>
                <fullName>Hives (a rash with raised red patches)</fullName>
            </value>
            <value>
                <fullName>Itchy, watery eyes</fullName>
            </value>
            <value>
                <fullName>Itchy nose</fullName>
            </value>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Rashes</fullName>
            </value>
            <value>
                <fullName>Redness</fullName>
            </value>
            <value>
                <fullName>Runny nose</fullName>
            </value>
            <value>
                <fullName>Sneezing</fullName>
            </value>
            <value>
                <fullName>Stomach cramps</fullName>
            </value>
            <value>
                <fullName>Swelling</fullName>
            </value>
            <value>
                <fullName>Throat closing</fullName>
            </value>
            <value>
                <fullName>Tongue swelling</fullName>
            </value>
            <value>
                <fullName>Vomiting</fullName>
            </value>
            <value>
                <fullName>Wheezing (a whistling sound when you breathe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>